tests/expectations/compiler/futures/future_parameter_fail.out
Error [ETYC0372116]: Finals may only appear as parameters to final fn.
    --> compiler-test:3:14
     |
   3 |     fn first(x: Final) -> Final {
     |              ^^^^^^^^
Error [ETYC0372116]: Finals may only appear as parameters to final fn.
    --> compiler-test:7:15
     |
   7 |     fn second(x: Final) -> u8 {
     |               ^^^^^^^^
Error [ETYC0372116]: Finals may only appear as parameters to final fn.
    --> compiler-test:12:10
     |
  12 | fn third(x: Final) -> u8 {
     |          ^^^^^^^^
